# DriverNGToolkit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  premake5.lua
DriverNGHook/: CMakeLists.txt  Client.cpp  Client.h  CrashHandlerReporter.cpp  CrashHandlerReporter.h  DebugConsole.cpp  DebugConsole.h  DriverNGHook.cpp  DriverNGHookDLL.cpp  Logger.cpp  Logger.h  LoggerImpl.cpp  LoggerImpl.h  ReHamster.h
DriverNGHook/Client/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Client.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters
DriverNGHook/Client/include/Client/: IClient.h
DriverNGHook/DLL/include/DLL/: CrashHandlerReporter.h  DebugConsole.h  Logger.h  ReHamster.h
DriverNGHook/DLL/source/: CrashHandlerReporter.cpp  DebugConsole.cpp  DriverNGHook.cpp  DriverNGHookDLL.cpp  Logger.cpp
DriverNGHook/Delegates/: DX9Delegate.cpp  DX9Delegate.h  IDirect3DDelegate.h  IInputDelegate.h  ILuaDelegate.h  ImGuiInputDelegate.cpp  ImGuiInputDelegate.h  LuaDelegate.cpp  LuaDelegate.h
DriverNGHook/DriverNG/: CMakeLists.txt
DriverNGHook/DriverNG/include/: Client.h
DriverNGHook/DriverNG/include/Delegates/: DX9Delegate.h  IInputDelegate.h  ILuaDelegate.h  ImGuiInputDelegate.h  LuaDelegate.h
DriverNGHook/DriverNG/include/Patches/: BasicPatch.h  CommonPatches.h  ModPack.h
DriverNGHook/DriverNG/include/Patches/All/: InputDevicesPatches.h  LuaPatches.h  OnlinePatches.h  ZDirect3D9DevicePatches.h  d3d9_common.h
DriverNGHook/DriverNG/include/UI/: ConsoleWidget.h  DebugTools.h  DebugWidget.h  Widget.h
DriverNGHook/DriverNG/source/: Client.cpp
DriverNGHook/DriverNG/source/Delegates/: DX9Delegate.cpp  ImGuiInputDelegate.cpp  LuaDelegate.cpp
DriverNGHook/DriverNG/source/Patches/: CommonPatches.cpp
DriverNGHook/DriverNG/source/Patches/All/: InputDevicesPatches.cpp  LuaPatches.cpp  OnlinePatches.cpp  ZDirect3D9DevicePatches.cpp  d3d9_common.cpp  d3d9_wrap.cpp  dinput_wrap.cpp
DriverNGHook/DriverNG/source/UI/: ConsoleWidget.cpp  DebugTools.cpp  DebugWidget.cpp
DriverNGHook/Launcher/: CMakeLists.txt
DriverNGHook/Launcher/assets/: app.aps
DriverNGHook/Launcher/source/: Launcher.cpp
DriverNGHook/Modules/ImGui/: CMakeLists.txt
DriverNGHook/Modules/ImGui/imgui/backends/: imgui_impl_dx9.cpp
DriverNGHook/Modules/ImGui/imgui/examples/: imgui_impl_dx9.cpp  imgui_impl_win32.cpp
DriverNGHook/Modules/cereal/: CMakeLists.txt
DriverNGHook/Modules/cereal/archives/: json.hpp
DriverNGHook/Modules/cereal/details/: helpers.hpp  static_object.hpp  traits.hpp
DriverNGHook/Modules/cereal/types/: base_class.hpp
DriverNGHook/Modules/cmdlib/: CMakeLists.txt
DriverNGHook/Modules/cmdlib/src/: cmdlib.cpp  cmdlib.h
DriverNGHook/Modules/lua/: CMakeLists.txt
DriverNGHook/Modules/lua/src/: luaconf.h
DriverNGHook/Modules/luafilesystem/: CMakeLists.txt
DriverNGHook/Modules/sol2/include/sol/: config.hpp  forward.hpp  sol.hpp
DriverNGHook/Patches/: BasicPatch.h  CommonPatches.cpp  CommonPatches.h
DriverNGHook/Patches/All/: Direct3D9DevicePatches.cpp  Direct3D9DevicePatches.h  InputDevicesPatches.cpp  InputDevicesPatches.h  LuaPatches.cpp  LuaPatches.h  OnlinePatches.cpp  OnlinePatches.h  d3d9_common.cpp  d3d9_wrap.cpp  d3d9_wrap.h  dinput_wrap.cpp  dinput_wrap.h
DriverNGHook/UI/: ConsoleWidget.cpp  ConsoleWidget.h  DebugTools.cpp  DebugTools.h
(+22 files in other folders)
